# speed-kings

./: Cargo.toml  README.md
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  status.md
src/: cli.rs  lib.rs  main.rs
src/benchmark/: metrics.rs  mod.rs  prompts.rs  runner.rs
src/output/: mod.rs  table.rs
src/pricing/: mod.rs
src/providers/: cerebras.rs  deepseek.rs  fireworks.rs  groq.rs  litellm.rs  local.rs  mod.rs  moonshot.rs  openai_compatible.rs  openrouter.rs  sambanova.rs  together.rs  zai.rs
